# OctantInfoBot

./: .gitignore  .replit  Pasted-Advice-for-potential-beneficiaries-Octant-is-an-experiment-in-participatory-public-goods-funding-Al-1733188795761.txt  Pasted-Edit-Network-egress-No-data-available-We-do-not-have-any-data-for-the-selected-service-metric-comb-1734389914630.txt  Pasted-How-Octant-works-This-article-describes-Octant-s-rationale-and-mechanics-if-you-want-to-know-how-to-1733188623347.txt  Pasted-Introduction-Octant-is-a-novel-platform-for-experiments-in-participatory-public-goods-funding-cente-1733188564411.txt  Pasted-OCTANTBOT-APP-Today-at-12-23-PM-Welcome-to-Octant-Trivia-Test-your-knowledge-about-Octant-s-e-1734121422104.txt  Pasted-Octant-s-GLM-locking-mechanism-Octant-is-an-innovative-platform-enabling-GLM-opens-new-window-holde-1733188685263.txt  Pasted-Propose-a-project-Octant-is-a-community-driven-platform-for-experiments-in-decentralized-governance--1733188737193.txt  Pasted-Quadratic-Funding-Epoch-4-introduced-quadratic-funding-opens-new-window-to-Octant-a-mechanism-that-1733188708768.txt  Pasted-Stack-Trace-Traceback-most-recent-call-last-File-app-discord-bot-py-line-339-in-main--1734390812250.txt  Pasted-Technical-outline-The-following-document-describes-the-math-behind-the-distribution-of-rewards-in-Oc-1733188826865.txt  Pasted-This-section-outlines-templates-that-projects-funded-by-Octant-should-use-when-participating-in-Octa-1733188773846.txt  Procfile  admin_dashboard.py  app.py  chat_handler.py  discord_bot.py  discord_bot.py.backup  main.py  (+8 more)
(+5 files in other folders)
