[project]
name = "octant-bot"
version = "0.1.0"
description = "Octant Discord Bot with Core optimization"
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.3.2",
    "python-dotenv>=1.0.1",
    "flask>=3.1.0",
    "flask-socketio>=5.4.1",
    "eventlet>=0.38.0",
    "flask-cors>=5.0.0",
    "flask-limiter>=3.9.2",
    "requests>=2.32.3",
    "psutil>=6.1.0",
]
